services page + lit fixes

--- a/account_details.html
+++ b/account_details.html
@@ -60,6 +60,7 @@
 <svg style="display: none" width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path id="arrow-icon" d="M0.999999 8L20 8M20 8L13.1087 1M20 8L13.1087 15" stroke-width="2" stroke-linecap="round"/>
 </svg>
+
 <svg style="display: none" width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path id="download-icon-1" d="M10 1L10 13.8913M10 13.8913L15.5 8.5M10 13.8913L4.5 8.5" stroke-width="2" stroke-linecap="round"/>
     <path id="download-icon-2" d="M2 16C2 15.4477 1.55228 15 1 15C0.447715 15 0 15.4477 0 16H2ZM1 20H0C0 20.5523 0.447715 21 1 21L1 20ZM19 20V21C19.5523 21 20 20.5523 20 20H19ZM20 16C20 15.4477 19.5523 15 19 15C18.4477 15 18 15.4477 18 16H20ZM0 16V20H2V16H0ZM1 21H19V19H1V21ZM20 20V16H18V20H20Z"/>
@@ -79,7 +80,7 @@
             </div>
         </div>
         <div class="col-xl-8 details-container">
-            <div class="details can-edit account-section" data-section="1">
+            <div class="details can-edit hide-section" data-section="1">
                 <h1>Account details</h1>
                 <div class="personal-items">
                     <div class="personal-item">
@@ -128,7 +129,7 @@
                 </div>
                 <a href="#" class="btn-normal save-btn">Save changes</a>
             </div>
-            <div class="history account-section" data-section="2">
+            <div class="history hide-section" data-section="2">
                 <h2>Order history</h2>
                 <div class="order-items">
                     <div class="order-item">
@@ -160,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div class="downloads account-section" data-section="3">
+            <div class="downloads hide-section" data-section="3">
                 <h2>Downloads</h2>
                 <div class="order-items">
                     <div class="order-item">
@@ -189,7 +190,7 @@
                     </div>
                 </div>
             </div>
-            <div class="addresses can-edit account-section" data-section="4">
+            <div class="addresses can-edit hide-section" data-section="4">
                 <h2>Account details</h2>
                 <div class="personal-items">
                     <div class="personal-item">
