--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Mageinn Website">
-    <title>Support</title>
+    <title>Contact</title>
     <link href="https://fonts.googleapis.com/css?family=Barlow:100,200,300,400,500,600,700,800,900|Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="assets/css/main.css" rel="stylesheet">
@@ -53,6 +53,23 @@
             </div>
         </div>
     </nav>
+    <div class="search-modal">
+        <div class="modal_form">
+            <form class="search-form">
+                <button type="submit">
+                    <img src="assets/images/Search.svg" alt="">
+                </button>
+                <input type="text" placeholder="Type here">
+            </form>
+            <div class="modal_close">
+                <div class="plus-minus">
+                    <div class="plus-minus-sign minus"></div>
+                    <div class="plus-minus-sign plus"></div>
+                </div>
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </div>
 </header>
 <hr>
 
