--- a/index.html
+++ b/index.html
@@ -17,54 +17,70 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/test.js"></script>
 </head>
-<body>
-<!--background-orange-->
-<div class="background-orange">
-    <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#"><img src="assets/images/logo.svg"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<body class="index-page">
+<header class="header">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#"><img src="assets/images/logo.svg"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="link" href="#">Extensions</a>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="link" href="#">Extensions</a>
+                </li>
+                <li class="nav-item">
+                    <a class="link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="link" href="#">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="link" href="#">Support</a>
+                </li>
+                <li class="nav-item">
+                    <a class="link" href="#">Contact</a>
+                </li>
+            </ul>
+            <div class="toolbar">
+                <ul>
+                    <li class="search">
+                        <img src="assets/images/icon-search.svg">
                     </li>
-                    <li class="nav-item">
-                      <a class="link" href="#">Services</a>
+                    <li class="wishlist">
+                        <img src="assets/images/icon-heart.svg">
                     </li>
-                    <li class="nav-item">
-                        <a class="link" href="#">Projects</a>
+                    <li class="cart">
+                        <img src="assets/images/icon-cart.svg">
                     </li>
-                    <li class="nav-item">
-                      <a class="link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="link" href="#">Support</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="link" href="#">Contact</a>
-                    </li>
+                    <li class="sign-in">Sign In</li>
                 </ul>
-                <div class="toolbar">
-                    <ul>
-                        <li class="search">
-                            <img src="assets/images/icon-search.svg">
-                        </li>
-                        <li class="wishlist">
-                            <img src="assets/images/icon-heart.svg">
-                        </li>
-                        <li class="cart">
-                            <img src="assets/images/icon-cart.svg">
-                        </li>
-                        <li class="sign-in">Sign In</li>
-                    </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="search-modal">
+        <div class="modal_form">
+            <form class="search-form">
+                <button type="submit">
+                    <img src="assets/images/Search.svg" alt="">
+                </button>
+                <input type="text" placeholder="Type here">
+            </form>
+            <div class="modal_close">
+                <div class="plus-minus">
+                    <div class="plus-minus-sign minus"></div>
+                    <div class="plus-minus-sign plus"></div>
                 </div>
             </div>
-        </nav>
-    </header>
-
+        </div>
+        <div class="overlay"></div>
+    </div>
+</header>
+<!--background-orange-->
+<div class="background-orange">
     <section class="banner">
         <div class="row">
             <div class="col-md-6">
@@ -105,16 +121,16 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="row">
-                    <div class="col-3 col-md-3">
+                    <div class="col-md-3">
                         <p class="extensions-choice extensions-choice1 extensions-choice-active" data-num-extensions="1">Best</p>
                     </div>
-                    <div class="col-3 col-md-3">
+                    <div class="col-md-3">
                         <p class="extensions-choice extensions-choice2 " data-num-extensions="2">Marketing</p>
                     </div>
-                    <div class="col-3 col-md-3">
+                    <div class="col-md-3">
                         <p class="extensions-choice extensions-choice3 " data-num-extensions="3">Sales</p>
                     </div>
-                    <div class="col-3 col-md-3">
+                    <div class="col-md-3">
                         <p class="extensions-choice extensions-choice4 " data-num-extensions="4">Shipping</p>
                     </div>
                 </div>
@@ -757,7 +773,7 @@
                 <h2>Our clients</h2>
             </div>
         </div>
-        <div class="row owl-carousel" id="slider">
+        <div class="row owl-carousel owl-carousel-clients" id="slider">
             <img src="assets/images/1.png" alt="">
             <img src="assets/images/2.png" alt="">
             <img src="assets/images/3.png" alt="">
