--- a/search_result.html
+++ b/search_result.html
@@ -4,81 +4,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Mageinn Website">
-    <title>Wishlist</title>
+    <title>Search result</title>
     <link href="https://fonts.googleapis.com/css?family=Barlow:100,200,300,400,500,600,700,800,900|Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body>
-<header class="header-product-list">
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="/"><img src="assets/images/product_list_img/logo.png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="link" href="#">Extensions</a>
-                </li>
-                <li class="nav-item">
-                    <a class="link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="link" href="#">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="link" href="#">Support</a>
-                </li>
-                <li class="nav-item">
-                    <a class="link" href="#">Contact</a>
-                </li>
-            </ul>
-            <div class="toolbar">
-                <ul>
-                    <li class="search">
-                        <img src="assets/images/product_list_img/Search.png">
-                    </li>
-                    <li class="wishlist">
-                        <img src="assets/images/product_list_img/Love.png">
-                    </li>
-                    <li class="cart">
-                        <img src="assets/images/product_list_img/Cart.png">
-                    </li>
-                    <li class="sign-in">Sign In</li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="search-modal">
-        <div class="modal_form">
-            <form class="search-form">
-                <button type="submit">
-                    <img src="assets/images/Search.svg" alt="">
-                </button>
-                <input type="text" placeholder="Type here">
-            </form>
-            <div class="modal_close">
-                <div class="plus-minus">
-                    <div class="plus-minus-sign minus"></div>
-                    <div class="plus-minus-sign plus"></div>
-                </div>
-            </div>
-        </div>
-        <div class="overlay"></div>
-    </div>
-</header>
-<hr>
 
 <svg style="display: none" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
     <path id="star-icon" d="M9.51643 12.8894L9 12.5779L8.48357 12.8894L4.94819 15.0215L5.88351 11.0005L6.02014 10.4131L5.5644 10.0182L2.44332 7.31363L6.55741 6.96062L7.15755 6.90913L7.39262 6.35454L9.00001 2.56238L10.6074 6.35455L10.8425 6.90913L11.4426 6.96062L15.5567 7.31363L12.4356 10.0182L11.9799 10.4131L12.1165 11.0005L13.0518 15.0215L9.51643 12.8894Z"/>
 </svg>
-<section class="wishlist">
-    <h1>Wishlist</h1>
-    <div class="row wishes">
+
+<section class="search-result">
+    <div class="search-modal">
+        <form class="search-form">
+            <button type="submit">
+                <img src="assets/images/Search.svg" alt="">
+            </button>
+            <input type="text" placeholder="Type here" value="Payment">
+        </form>
+        <div class="modal_close">
+            <div class="plus-minus">
+                <div class="plus-minus-sign minus"></div>
+                <div class="plus-minus-sign plus"></div>
+            </div>
+        </div>
+    </div>
+    <div class="result-text">Showing 1 results for "<span class="search-text">Payment</span>"</div>
+    <div class="row results">
         <div class="col-12 col-lg-6 col-xl-4">
             <div class="card">
                 <div class="card-body">
@@ -194,72 +147,7 @@
             </div>
         </div>
     </div>
-    <a href="#" class="request-button">Send a Request</a>
 </section>
-
-<hr>
-<section class="bottom-menu">
-    <div class="row">
-        <div class="col-4 col-sm-12 col-md-6">
-            <nav class="navbar navbar-expand-sm">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Extensions</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Support</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="col-8 col-sm-12 col-md-6">
-            <div class="right">
-                <nav class="navbar navbar-expand-sm">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">sales@mageinn.com</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">+7 900 322 7676</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link social" href="#"><img src="assets/images/face.svg"></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link social" href="#"><img src="assets/images/insta.svg"></a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
-</section>
-<footer class="footer">
-    <div class="row">
-        <div class="col-md-2">
-            <img src="assets/images/MAGEINN-04.png" alt="">
-        </div>
-        <div class="col-md-8">
-            <h6>© 2014-2018 Mageinn. All Rights Reserved</h6>
-        </div>
-        <div class="col-md-2">
-            <h5>Sign in</h5>
-        </div>
-    </div>
-</footer>
-
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
