--- a/success.html
+++ b/success.html
@@ -53,6 +53,23 @@
             </div>
         </div>
     </nav>
+    <div class="search-modal">
+        <div class="modal_form">
+            <form class="search-form">
+                <button type="submit">
+                    <img src="assets/images/Search.svg" alt="">
+                </button>
+                <input type="text" placeholder="Type here">
+            </form>
+            <div class="modal_close">
+                <div class="plus-minus">
+                    <div class="plus-minus-sign minus"></div>
+                    <div class="plus-minus-sign plus"></div>
+                </div>
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </div>
 </header>
 <hr>
 
