rework about page, fix product list page, add sign in modal

--- a/index.html
+++ b/index.html
@@ -78,6 +78,48 @@
         </div>
         <div class="overlay"></div>
     </div>
+    <div class="sign-in-modal">
+        <div class="modal_form">
+            <div class="sign-in-buttons modal-item">
+                <a href="" class="btn-normal-black link-with-img"><img src="assets/images/google.png" alt="">Sign in with google</a>
+                <a href="" class="btn-normal-black link-with-img"><img src="assets/images/facebook.png" alt="">Sign in with facebook</a>
+            </div>
+            <div class="or-block modal-item">Or</div>
+            <form class="sign-in-form sign-in-item modal-item">
+                <div class="form-inputs">
+                    <input type="text" placeholder="E-mail">
+                    <input type="text" placeholder="Password">
+                </div>
+                <button type="submit" class="btn-normal">Sign in</button>
+            </form>
+            <div class="bottom-line sign-in-item modal-item">
+                <a href="#" class="link-small">Forgot password?</a>
+                <div>No account?<a href="" class="link-small show-sign-up">Sign up</a></div>
+            </div>
+            <form class="sign-in-form sign-up-item modal-item">
+                <div class="form-inputs">
+                    <input type="text" placeholder="E-mail">
+                    <input type="text" placeholder="Password">
+                </div>
+                <button class="btn-normal sign-up-btn">Sign up</button>
+            </form>
+            <div class="bottom-line sign-up-item modal-item">
+                <div>Already have an account? <a href="" class="link-small show-sign-in">Sign in</a></div>
+            </div>
+            <form class="sign-in-form create-account-item">
+                <div class="form-title">Tell us about yourself</div>
+                <div class="form-inputs">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Country">
+                </div>
+                <button type="submit" class="btn-normal sign-up-btn">Create Account</button>
+            </form>
+            <div class="bottom-line create-account-item">
+                <div>By clicking "Create Account" you agree to our <a href="" class="link-small show-sign-in">Privacy Policy</a></div>
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </div>
 </header>
 <!--background-orange-->
 <div class="background-orange">
