product-list fix

--- a/product_list.html
+++ b/product_list.html
@@ -352,63 +352,9 @@
 
             <div class="col-12 col-lg-6 col-xl-4">
                 <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-3 col-xs-6">
-                                <a href="#" class="open-product-modal-btn" data-open-modal="product-1">
-                                    <img src="assets/images/extension1.png">
-                                </a>
-                            </div>
-                            <div class="col-md-9 col-xs-6 card-info">
-                                <div class="row card-headline">
-                                    <a href="#" class="open-product-modal-btn" data-open-modal="product-1">
-                                        <p class="card-text title">Salesforce Connector</p>
-                                    </a>
-                                    <a href="#" class="card-text topline">M2</a>
-                                </div>
-                                <div class="row card-botline">
-                                    <div class="reviews-block">
-                                        <div class="product-rating">
-                                            <div class="rating-item active">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                            <div class="rating-item active">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                            <div class="rating-item active">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                            <div class="rating-item">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                            <div class="rating-item">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                        </div>
-                                        <p class="reviews">8 reviews</p>
-                                    </div>
-                                    <span>#Marketing</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <p class="information-about-product">By using our Magento 2 Salesforce CRM Integration extension, store managers will be able to automatically sync all customer’s data</p>
-                                <br>
-                                <p class="card-text price">$299.00</p>
-                            </div>
-                        </div>
-                    </div>
+                    <a href="#" class="card-body banner">
+                        <img src="assets/images/product_list_img/migration-banner.jpg" alt="">
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
@@ -658,63 +604,9 @@
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
                 <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-3 col-xs-6">
-                                <a href="#" class="open-product-modal-btn" data-open-modal="product-1">
-                                    <img src="assets/images/extension1.png">
-                                </a>
-                            </div>
-                            <div class="col-md-9 col-xs-6 card-info">
-                                <div class="row card-headline">
-                                    <a href="#" class="open-product-modal-btn" data-open-modal="product-1">
-                                        <p class="card-text title">Salesforce Connector</p>
-                                    </a>
-                                    <a href="#" class="card-text topline">M2</a>
-                                </div>
-                                <div class="row card-botline">
-                                    <div class="reviews-block">
-                                        <div class="product-rating">
-                                            <div class="rating-item active">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                            <div class="rating-item active">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                            <div class="rating-item active">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                            <div class="rating-item">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                            <div class="rating-item">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="star">
-                                                    <use xlink:href="#star-icon"></use>
-                                                </svg>
-                                            </div>
-                                        </div>
-                                        <p class="reviews">8 reviews</p>
-                                    </div>
-                                    <span>#Marketing</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <p class="information-about-product">By using our Magento 2 Salesforce CRM Integration extension, store managers will be able to automatically sync all customer’s data</p>
-                                <br>
-                                <p class="card-text price">$299.00</p>
-                            </div>
-                        </div>
-                    </div>
+                    <a href="#" class="card-body banner">
+                        <img src="assets/images/product_list_img/support-banner.png" alt="">
+                    </a>
                 </div>
             </div>
 
